Replaced string arg with ...
And added documentation

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,12 +14,37 @@ knitr::opts_chunk$set(
 
 [![Travis-CI Build Status](https://travis-ci.org/poissonconsulting/yesno.svg?branch=master)](https://travis-ci.org/poissonconsulting/yesno)
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/poissonconsulting/yesno?branch=master&svg=true)](https://ci.appveyor.com/project/poissonconsulting/yesno)
+[![codecov](https://codecov.io/gh/poissonconsulting/yesno/branch/master/graph/badge.svg)](https://codecov.io/gh/poissonconsulting/yesno)
 
 # yesno
 
 ## Introduction
 
 Provides a single function `yesno()` which asks a custom yes-no question with variable responses.
+
+The order and phrasing of the possible responses varies randomly to ensure the user consciously chooses (as opposed to automatically types their response).
+
+## Demonstration
+
+```
+yesno("Do you like ", R.Version()$nickname ,"?")
+Do you like Bug in Your Hair?
+1: Definitely
+2: No way
+3: No
+
+Selection: 1
+[1] TRUE
+
+yesno("Do you like ", R.Version()$nickname ,"?")
+Do you like Bug in Your Hair?
+1: No way
+2: Uhhhh... Maybe?
+3: I agree
+
+Selection: 2
+[1] FALSE
+```
 
 ## Installation
 
@@ -28,6 +53,10 @@ To install the latest version from GitHub
 # install.packages("devtools")
 devtools::install_github("poissonconsulting/yesno")
 ```
+
+## Information
+
+For more information install and load the `yesno` package and type `?yesno`.
 
 ## Inspiration
 
