--- a/README.Rmd
+++ b/README.Rmd
@@ -58,6 +58,11 @@ devtools::install_github("poissonconsulting/yesno")
 
 For more information install and load the `yesno` package and type `?yesno`.
 
+## Contribution
+
+Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). 
+By participating in this project you agree to abide by its terms.
+
 ## Inspiration
 
 - The single function is the internal `yesno()` function from [devtools](https://github.com/hadley/devtools) (modified to return TRUE if the user answers yes).
