--- a/README.Rmd
+++ b/README.Rmd
@@ -12,14 +12,18 @@ knitr::opts_chunk$set(
 )
 ```
 
-[![lifecycle](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable)
-[![Travis-CI Build Status](https://travis-ci.org/poissonconsulting/yesno.svg?branch=master)](https://travis-ci.org/poissonconsulting/yesno)
-[![codecov](https://codecov.io/gh/poissonconsulting/yesno/branch/master/graph/badge.svg)](https://codecov.io/gh/poissonconsulting/yesno)
-[![License: GPL2](https://img.shields.io/badge/License-GPL2-blue.svg)](https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html)
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/yesno)](https://cran.r-project.org/package=yesno)
-![CRAN Downloads](http://cranlogs.r-pkg.org/badges/yesno)
-
 # yesno
+
+<!-- badges: start -->
+[![lifecycle](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable)
+[![Travis build status](https://travis-ci.com/poissonconsulting/yesno.svg?branch=master)](https://travis-ci.com/poissonconsulting/yesno)
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/poissonconsulting/yesno?branch=master&svg=true)](https://ci.appveyor.com/project/poissonconsulting/yesno)
+[![Codecov test coverage](https://codecov.io/gh/poissonconsulting/yesno/branch/master/graph/badge.svg)](https://codecov.io/gh/poissonconsulting/yesno?branch=master)
+[![License: GPL2](https://img.shields.io/badge/License-GPL2-blue.svg)](https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html)
+[![Tinyverse status](https://tinyverse.netlify.com/badge/yesno)](https://CRAN.R-project.org/package=yesno)
+[![CRAN status](https://www.r-pkg.org/badges/version/yesno)](https://cran.r-project.org/package=yesno)
+![CRAN downloads](https://cranlogs.r-pkg.org/badges/yesno)
+<!-- badges: end -->
 
 ## Introduction
 
@@ -61,26 +65,25 @@ Selection: 1
 [1] TRUE
 ```
 
+
 ## Installation
 
-To install the latest release version from [CRAN](https://cran.r-project.org)
-```
+To install the latest release from [CRAN](https://cran.r-project.org)
+```{r, eval=FALSE}
 install.packages("yesno")
 ```
 
-To install the latest development version from the Poisson drat [repository](https://github.com/poissonconsulting/drat)
+To install the developmental version from [GitHub](https://github.com/poissonconsulting/yesno)
+```{r, eval=FALSE}
+# install.packages("remotes")
+remotes::install_github("poissonconsulting/yesno")
 ```
-if(!"drat" %in% installed.packages()[,1]) 
-  install.packages("drat")
+
+To install the latest developmental release from the Poisson drat [repository](https://github.com/poissonconsulting/drat)
+```{r, eval=FALSE}
+# install.packages("drat")
 drat::addRepo("poissonconsulting")
 install.packages("yesno")
-```
-
-To install the latest development version from [GitHub](https://github.com/poissonconsulting/rpdo)
-```
-if(!"devtools" %in% installed.packages()[,1]) 
-  install.packages("devtools")
-devtools::install_github("poissonconsulting/yesno")
 ```
 
 ## Contribution
@@ -89,9 +92,10 @@ Please report any [issues](https://github.com/poissonconsulting/yesno/issues).
 
 [Pull requests](https://github.com/poissonconsulting/yesno/pulls) are always welcome.
 
-Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). 
-By participating in this project you agree to abide by its terms.
-
+## Code of Conduct
+  
+Please note that the yesno project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/1/0/0/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
+  
 ## Inspiration
 
 - The `yesno()` function is based on the internal function with the same name from [devtools](https://github.com/hadley/devtools) (modified to return TRUE if the user answers yes).
