--- a/README.Rmd
+++ b/README.Rmd
@@ -94,7 +94,7 @@ Please report any [issues](https://github.com/poissonconsulting/yesno/issues).
 
 ## Code of Conduct
   
-Please note that the yesno project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/1/0/0/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
+Please note that the yesno project is released with a [Contributor Code of Conduct](https://www.contributor-covenant.org/version/1/0/0/code-of-conduct/). By contributing to this project, you agree to abide by its terms.
   
 ## Inspiration
 
