--- a/README.Rmd
+++ b/README.Rmd
@@ -23,6 +23,7 @@ knitr::opts_chunk$set(
 [![Tinyverse status](https://tinyverse.netlify.com/badge/yesno)](https://CRAN.R-project.org/package=yesno)
 [![CRAN status](https://www.r-pkg.org/badges/version/yesno)](https://cran.r-project.org/package=yesno)
 ![CRAN downloads](https://cranlogs.r-pkg.org/badges/yesno)
+[![R build status](https://github.com/poissonconsulting/yesno/workflows/R-CMD-check/badge.svg)](https://github.com/poissonconsulting/yesno/actions)
 <!-- badges: end -->
 
 ## Introduction
